# RiichiEnv

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
demos/: README.md  replay_debug.ipynb  replay_demo.ipynb  replay_penalty_display.ipynb
docs/: BENCHMARK.md  RULES.md  SEQUENCE_FEATURE_ENCODING.md
native/src/: types.rs
riichienv-core/: Cargo.toml  README.md
riichienv-core/benches/: agari_bench.rs
riichienv-core/src/: action.rs  grp.rs  lib.rs  rule.rs  shanten.rs  tests.rs  types.rs  yaku_3p.rs  yaku_checker.rs
riichienv-core/tests/: agari_correctness.rs
riichienv-ml/: .gitignore  README.md  pyproject.toml
riichienv-ml/configs/: ppo_async.yml
riichienv-ml/scripts/: run_self_match.py  test_bc_3p.py  train_bc.py  train_cql.py  train_ppo.py
riichienv-python/: Cargo.toml
riichienv-python/src/: env.rs  lib.rs
riichienv-ui/: package-lock.json  package.json  player_custom_demo.html
riichienv-ui/demos/: README.md  replay_demo.ipynb
riichienv-ui/src/: analyzer.ts  base_viewer.ts  config.ts  constants.ts  controller.ts  game_state.ts  icons.ts  index.ts  live_viewer.ts  riichi_viewer.ts  styles.ts  styles_3d.ts  types.ts  viewer.ts  viewer_3d.ts
riichienv-validation/: pyproject.toml
riichienv-wasm/: Cargo.toml
riichienv-wasm/src/: lib.rs
scripts/: validate_tenhou_logs.py
src/riichienv/: __init__.py  _riichienv.pyi  action.py
tests/: test_bc_resume.py  test_bc_sequence_policy.py  test_env_scoring.py  test_grp_dataset.py  test_mjai_replay.py  test_observation_serialization.py  test_self_match.py
(+59 files in other folders)
