[project]
name = "riichienv-validation"
version = "0.1.0"
description = "Validation suite for RiichiEnv using MjSoul replays"
requires-python = ">=3.10, <3.15"
dependencies = [
    "riichienv>=0.3.3",
    "mjsoul-parser",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
mjsoul-parser = { workspace = true }
riichienv = { path = "../" }

[tool.uv.workspace]
members = ["packages/mjsoul-parser"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/riichienv_validation"]

[project.scripts]
validate-4p = "riichienv_validation.validate_4p:main"
validate-3p = "riichienv_validation.validate_3p:main"
validate-4p-hands = "riichienv_validation.hand_eval_4p:main"
validate-3p-hands = "riichienv_validation.hand_eval_3p:main"
validate-4p-tenhou = "riichienv_validation.validate_4p_tenhou:main"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
